# memory-pod

./: .env.example  .gitignore  Makefile  PROJECT_DESCRIPTION_V3.md  PROJECT_DESCRIPTION_V4.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: demo_task.md  engine_task.md  interaction_task.md
data/experts/: academic.md  accountant.md  coding.md  cover-letter.md  email.md  financial-advisor.md  hr-specialist.md  lawyer.md  management-consultant.md  marketing-strategist.md  marketing.md  resume.md
data/profiles/alice/: memory.md
data/profiles/bob/: memory.md
docs/: COLLABORATION.md  DEMO_RUNBOOK.md  HANDOFF_TEMPLATE.md  TASK_BOARD.md
docs/superpowers/plans/: 2026-06-21-mvp-hardening-v1-1.md  (+3 more)
scripts/: demo_learn.py  download_model.py  judge_demo.py  onboard.py  pod_demo.py  seed_demo_profiles.py  seed_experts.py  seed_pod_demo.py
src/memory_pod/: __init__.py  active_dock.py  augment.py  cli.py  config.py  embeddings.py  hotkey_popup.py  ingest.py  llm.py  memory_store.py  onboarding.py  os_loop.py  pods.py  prompt_assembly.py  radar.py  remember.py  retrieval.py  rewriter.py
tests/: test_active_dock.py  test_augment.py  test_cli.py  test_cli_pods.py  test_cli_remember.py  test_demo_setup.py  test_documentation.py  test_ingest.py  test_makefile_defaults.py  test_memory_store.py  test_onboarding.py  test_os_loop.py  test_pod_stack.py  test_pods.py  test_popup_helpers.py  test_prompt_assembly.py  test_radar.py  test_remember.py  test_retrieval.py  test_rewriter.py
(+4 files in other folders)
